--- a/Packages/Delphi/VirtualTreesDR.dproj
+++ b/Packages/Delphi/VirtualTreesDR.dproj
@@ -52,6 +52,7 @@
         <Base>true</Base>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
+        <DCC_CBuilderOutput>All</DCC_CBuilderOutput>
         <DCC_Description>VirtualTree Delphi runtime package</DCC_Description>
         <SanitizedProjectName>VirtualTreesDR</SanitizedProjectName>
         <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
